Fixed the spacing of the social media links

--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,13 @@
     height: 350px;
     width: 100%;
 }
+
 .space {
     text-align: -webkit-center;
     height: 350px;
     padding: 0;
 }
+
 .nav-bar{
     background-color:#BB000E;
 }
@@ -146,7 +148,6 @@ list-style: none;
     float: left;
 }
 
-
 .social_media ul {
     list-style: none;
 }
@@ -221,8 +222,14 @@ list-style: none;
         text-align: center;
         font-size: 20px;
         margin: auto;
-       margin-left: 15px; 
-       padding-left: 5px;
+        padding-left: 5px;
+    }
+
+    .social_media li {
+       display: inline;
+       margin: auto;
+       padding: 0;
+       padding-right: 5px;
     }
 }
 
@@ -233,7 +240,7 @@ list-style: none;
     }
 
     .nav-bar li {
-       padding-left: 0;
+       padding: 0;
               
     }
 
